# transaction-categorization-service

./: .env.example  .gitignore  CLAUDE.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: base.py
backend/app/db/models/: account.py  agent_run.py  audit_log.py  category.py  embeddings.py  feedback.py  job.py  learning_pattern.py  merchant_alias.py  statement.py  tenant.py  transaction.py  user.py
backend/app/observability/: logging.py
infra/: docker-compose.yml
