[project]
name = "txcat-backend"
version = "0.1.0"
description = "Financial transaction categorization service"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    # Validation & settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.1.0",
    # Task queue
    "celery[redis]>=5.4.0",
    "celery-redbeat>=2.2.0",
    # AI / ML
    "anthropic>=0.28.0",
    "sentence-transformers>=3.0.0",
    # Document parsing
    "pdfplumber>=0.11.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "python-docx>=1.1.0",
    "pytesseract>=0.3.0",
    "Pillow>=10.3.0",
    # Storage
    "boto3>=1.34.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    # Security
    "cryptography>=42.0.0",
    "slowapi>=0.1.9",
    "python-magic>=0.4.0",
    "werkzeug>=3.0.0",
    # Observability
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-instrumentation-celery>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.0.0",
    # Utilities
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.7.0",
    # Type stubs
    "types-python-jose>=3.3.0",
    "types-Pillow>=10.0.0",
    "types-aiofiles>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ── Ruff ─────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501", "B008"]  # B008: FastAPI uses Depends() in defaults

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Mypy ─────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "pdfplumber.*", "pytesseract.*", "sentence_transformers.*", "pgvector.*", "redbeat.*"]
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

# ── Bandit ───────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert statements in tests are fine
